--- a/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
@@ -8,6 +8,20 @@
     android:background="@drawable/home">
 
     <ImageView
+        android:id="@+id/donate_contactImg3"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/donate_eventsImg"
+        app:layout_constraintTop_toBottomOf="@+id/donate_divider"
+        app:layout_constraintVertical_bias="0.896"
+        app:srcCompat="@drawable/baseline_phone_24" />
+
+    <ImageView
         android:id="@+id/donate_adminDashboard"
         android:layout_width="70dp"
         android:layout_height="59dp"
@@ -57,7 +71,7 @@
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.147"
+        app:layout_constraintHorizontal_bias="0.078"
         app:layout_constraintStart_toEndOf="@+id/donate_aboutUsImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
         app:layout_constraintVertical_bias="0.577"
@@ -70,7 +84,7 @@
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.114"
+        app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toEndOf="@+id/donate_homeImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
         app:layout_constraintVertical_bias="0.577"
@@ -83,7 +97,7 @@
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.724"
+        app:layout_constraintHorizontal_bias="0.789"
         app:layout_constraintStart_toEndOf="@+id/donate_eventsImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
         app:layout_constraintVertical_bias="0.577"
@@ -96,7 +110,7 @@
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintHorizontal_bias="0.381"
         app:layout_constraintStart_toEndOf="@+id/donate_donationImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
         app:layout_constraintVertical_bias="0.577"
@@ -120,7 +134,7 @@
         android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/donate_eventsImg"
-        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toEndOf="@+id/donate_donationImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
         app:layout_constraintVertical_bias="0.577"
