--- a/LadyBird_Foundation/app/src/main/res/layout/activity_home.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_home.xml
@@ -35,71 +35,6 @@
         app:layout_constraintVertical_bias="0.074"
         tools:ignore="TextSizeCheck" />
 
-    <ImageView
-        android:id="@+id/home_homeImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_home_24"
-        android:importantForAccessibility="no" />
-
-    <ImageView
-        android:id="@+id/home_donationImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:importantForAccessibility="no"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.149"
-        app:layout_constraintStart_toEndOf="@+id/home_aboutUsImg"
-        app:layout_constraintTop_toBottomOf="@+id/home_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_attach_money_24" />
-
-    <ImageView
-        android:id="@+id/home_aboutUsImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:importantForAccessibility="no"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.114"
-        app:layout_constraintStart_toEndOf="@+id/home_homeImg"
-        app:layout_constraintTop_toBottomOf="@+id/home_divider"
-        app:layout_constraintVertical_bias="0.594"
-        app:srcCompat="@drawable/baseline_info_24" />
-
-    <ImageView
-        android:id="@+id/home_loginoutImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:importantForAccessibility="no"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.655"
-        app:layout_constraintStart_toEndOf="@+id/home_eventsImg"
-        app:layout_constraintTop_toBottomOf="@+id/home_divider"
-        app:layout_constraintVertical_bias="0.594"
-        app:srcCompat="@drawable/baseline_login_24" />
-
-    <ImageView
-        android:id="@+id/home_eventsImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:importantForAccessibility="no"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintStart_toEndOf="@+id/home_donationImg"
-        app:layout_constraintTop_toBottomOf="@+id/home_divider"
-        app:layout_constraintVertical_bias="0.594"
-        app:srcCompat="@drawable/baseline_event_24" />
-
     <View
         android:id="@+id/home_divider"
         android:layout_width="409dp"
@@ -205,17 +140,6 @@
         app:srcCompat="@drawable/img4"
         android:importantForAccessibility="no" />
 
-    <ImageView
-        android:id="@+id/home_locationImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/home_eventsImg"
-        app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintStart_toEndOf="@+id/home_donationImg"
-        app:layout_constraintTop_toBottomOf="@+id/home_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_share_location_24" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -229,4 +153,96 @@
         app:layout_constraintVertical_bias="0.681"
         app:srcCompat="@drawable/img5"
         android:importantForAccessibility="no" />
+
+
+    <ImageView
+        android:id="@+id/home_contactImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/home_loginoutImg"
+        app:layout_constraintHorizontal_bias="0.842"
+        app:layout_constraintStart_toEndOf="@+id/home_donationImg"
+        app:layout_constraintTop_toBottomOf="@+id/home_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_phone_24" />
+
+    <ImageView
+        android:id="@+id/home_homeImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_home_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/home_donationImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.099"
+        app:layout_constraintStart_toEndOf="@+id/home_aboutUsImg"
+        app:layout_constraintTop_toBottomOf="@+id/home_divider"
+        app:layout_constraintVertical_bias="0.594"
+        app:srcCompat="@drawable/baseline_attach_money_24" />
+
+    <ImageView
+        android:id="@+id/home_aboutUsImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.101"
+        app:layout_constraintStart_toEndOf="@+id/home_homeImg"
+        app:layout_constraintTop_toBottomOf="@+id/home_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_info_24" />
+
+    <ImageView
+        android:id="@+id/home_loginoutImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.833"
+        app:layout_constraintStart_toEndOf="@+id/home_eventsImg"
+        app:layout_constraintTop_toBottomOf="@+id/home_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_login_24" />
+
+    <ImageView
+        android:id="@+id/home_eventsImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.385"
+        app:layout_constraintStart_toEndOf="@+id/home_donationImg"
+        app:layout_constraintTop_toBottomOf="@+id/home_divider"
+        app:layout_constraintVertical_bias="0.594"
+        app:srcCompat="@drawable/baseline_event_24" />
+
+    <ImageView
+        android:id="@+id/home_locationImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.131"
+        app:layout_constraintStart_toEndOf="@+id/home_donationImg"
+        app:layout_constraintTop_toBottomOf="@+id/home_divider"
+        app:layout_constraintVertical_bias="0.594"
+        app:srcCompat="@drawable/baseline_share_location_24" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
