--- a/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="336dp"
-        android:layout_height="500dp"
+        android:layout_width="345dp"
+        android:layout_height="599dp"
         android:layout_margin="16dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
@@ -18,7 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="575dp"
             android:padding="16dp">
 
             <Button
@@ -29,9 +29,10 @@
                 android:text="Save"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.472"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.871" />
+                app:layout_constraintVertical_bias="0.964" />
 
             <EditText
                 android:id="@+id/aLocation_addressName"
@@ -71,6 +72,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.049"
                 app:srcCompat="@drawable/location1" />
+
+            <Spinner
+                android:id="@+id/area"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:entries="@array/location_array"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/aLocation_address"
+                app:layout_constraintVertical_bias="0.095" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
