--- a/LadyBird_Foundation/app/src/main/res/layout/admi_donate.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/admi_donate.xml
@@ -8,8 +8,8 @@
     android:padding="16dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="330dp"
-        android:layout_height="520dp"
+        android:layout_width="327dp"
+        android:layout_height="400dp"
         android:layout_margin="16dp"
         android:padding="16dp"
         app:cardCornerRadius="16dp"
@@ -22,50 +22,10 @@
         app:layout_constraintWidth_percent="0.9">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="326dp"
-            android:layout_height="494dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:padding="16dp">
 
-
-            <EditText
-                android:id="@+id/adminD_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Category"
-                android:inputType="text"
-                android:minHeight="48dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.465"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button3"
-                app:layout_constraintVertical_bias="0.167" />
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#932020"
-                android:text="Upload Image"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/adminD_upload"
-                app:layout_constraintVertical_bias="0.053" />
-
-            <ImageView
-                android:id="@+id/adminD_upload"
-                android:layout_width="164dp"
-                android:layout_height="130dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.491"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.072"
-                app:srcCompat="@drawable/upload" />
 
             <EditText
                 android:id="@+id/adminD_item"
@@ -78,10 +38,24 @@
                 android:minHeight="48dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.48"
+                app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/adminD_category"
-                app:layout_constraintVertical_bias="0.073" />
+                app:layout_constraintVertical_bias="0.075" />
+
+            <EditText
+                android:id="@+id/adminD_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Category"
+                android:inputType="text"
+                android:minHeight="48dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/button4"
@@ -91,8 +65,19 @@
                 android:text="Save Donation Item"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/adminD_item" />
+                app:layout_constraintTop_toBottomOf="@+id/adminD_item"
+                app:layout_constraintVertical_bias="0.435" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="135dp"
+                android:layout_height="136dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/donation1" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
